--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "query-string": "~1.0.0",
     "quickshare": "QuickShare#~1.3.4",
     "slick.js": "~1.5.5",
-    "twbs-bootstrap-sass": "3.3.5",
+    "bootstrap": "4.0.0-alpha.6",
     "waypoints": "~4.0.0"
   }
 }
